Some alignment fixes

--- a/public/start.css
+++ b/public/start.css
@@ -1,11 +1,16 @@
 
-img.filmstrip {
-  margin: 0 -100px;
+.filmstrip {
+  margin-left: -128px;
+  margin-right: -128px;
+  text-align: center;
+}
+
+.filmstrip img {
   box-shadow: 0px 0px 20px 10px rgba(0,0,0,0.3);
 }
 
 p {
-  margin: 30px 0;
+  margin: 48px 0;
 }
 
 img.pics {
@@ -17,5 +22,5 @@ img.pics {
 }
 
 p.photos {
-  margin: 50px 0;
+  margin: 64px 0;
 }
